# cute-project

./: Cargo.toml  README.md
cute-cli/: Cargo.toml
cute-cli/src/: lib.rs
cute-cli/src/context/: mod.rs  test.rs
cute-cli/src/tasks/: constructor.rs  mod.rs  test.rs
cute-comment/: README.md  Trait.md  async.md  clone_copy.md
cute-core/: Cargo.toml  README.md
cute-core/src/: errors.rs  lib.rs  procs.rs  serdes.rs  tasks.rs  works.rs
cute-database/: Cargo.toml
cute-database/src/: lib.rs
cute-database/src/generate_mysql/: mod.rs
cute-embadded/: Cargo.toml  build.rs
cute-embadded/cute-driver/headers/: constants.h  driver.h  input.h  output.h
cute-embadded/cute-driver/headers/board_high/include/: board_high.h  input.h  output.h
cute-embadded/cute-driver/headers/borad_low/include/: board_low.h
cute-embadded/cute-driver/headers/common/include/: common.h  error.h  type.h
cute-embadded/cute-driver/headers/include/: driver.h  input.h  output.h
cute-embadded/cute-driver/libs/: cute_driver.lib
cute-embadded/src/: lib.rs
cute-embadded/src/ffi/: mod.rs
cute-embadded/src/ffi/input/: mod.rs
cute-embadded/src/ffi/output/: mod.rs
cute-embadded/src/ffi/tasks/: mod.rs
cute-log/: Cargo.toml
cute-log/src/: lib.rs
cute-network/: Cargo.toml  READMD.md  build.rs
cute-network/proto/: cute.proto
cute-network/src/: lib.rs
cute-network/src/grpc/: README.md  client.rs  mod.rs  server.rs
cute-network/src/grpc/proto/: cute.rs  mod.rs
cute-network/src/raw/: README.md  client.rs  mod.rs  packet.rs  server.rs
cute-network/src/raw/stub/: client.rs  mod.rs  server.rs
