[workspace]
resolver = "2"
members = [
    "cute-cli",
    "cute-core"
,   "cute-network"]

[workspace.package]
edition = "2021"
version = "0.0.1"
rust-version = "1.83.0"
authors = ["pk-bin"]
repository = "https://github.com/bin-pk/cute-project"
license = "MIT"
description = "Practice Rust-lang"

[workspace.dependencies]
cute-core = {path = "cute-core"}
cute-network = {path = "cute-network"}

tokio = {version = "1.40", features = ["full"]}
tokio-stream = {version = "0.1" , features = ["full"]}
log = {version = "0.4.22"}
log4rs = {version = "1.3.0"}
serde = {version = "1.0" , features = ["derive"]}
async-trait = {version = "0.1"}
async-stream = {version = "0.3.5"}
chrono = {version = "0.4"}
