[package]
name = "cute-database"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
cute-core.workspace = true
cute-log.workspace = true

mysql = "25.0.1"