[package]
name = "cute-network"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description.workspace = true
build = "build.rs"

[dependencies]
cute-core.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
async-trait.workspace = true
async-stream.workspace = true
log = {version = "0.4"}
prost = {version = "0.12"}
tonic = {version = "0.10"}

[build-dependencies]
tonic-build = "0.10"